[package]
name = "backoff-rs"
version = "0.1.0"
edition = "2018"
authors = ["Dean Karn <dean.karn@gmail.com>"]
description = "Backoff provides the base components for implementing backoff and retry operations."
keywords = [
    "backoff",
    "exponential",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-playground/backoff-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
